@@ -1,3 +1,8 @@
+2018-08-13  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
+	* gcc/config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add support
+	for folding vec_perm.
+
 2018-08-13 Will Schmidt  <will_schmidt@vnet.ibm.com>
 
 	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin):
